perf+refactor: hoist regexes, dedupe helpers, harden errors
Engine hot-path:
- PatternMatcher.hasGroup: replace per-match try/catch flow control
  with cached named-group probe.
- Chain: cache namedGroups per Pattern; reuse Matchers across head
  iterations; replace per-iter regex with char-loop separator check.
- DatePatterns: hoist 5 per-call Pattern.compile sites.
- Numerals/Formatters: hoist split/replaceAll regexes.
- MarkerPhase.contains: list -> set for O(1) lookup.
- Formatters.cleanup: ArrayList<Integer>.contains -> LinkedHashSet.
- MatchSet.removeAll bulk remove; ConflictSolver uses it.

rules/property regex hoist (per-call Pattern.compile):
- EpisodeWordExtractor: 5 sites -> static finals (incl. quadratic
  isFollowedByOfClause site).
- ScreenSizeExtractor: 3 constant patterns static; config-derived
  patterns memoized via instance ConcurrentMap.
- VideoCodecExtractor: hevc10 + AVC_HD static; dashed src cached.
- OtherExtractor / EditionExtractor / SourceExtractor /
  StreamingServiceExtractor / AudioCodecExtractor /
  ContainerExtractor / ReleaseGroupExtractor: source-keyed caches
  via computeIfAbsent.

Dedupe Other/Edition shared logic into ConfigPatternHelpers:
- compileDashedCi (shared cache), SENTINEL, defaultTags, asList,
  parseTags, resolveValidator, emitString, createMatch,
  hasAdjacentBefore/After, removeUnlessNeighbor.
- forEachString helper for String|List<String> dispatch.
- forEachSpec walks the standard "section -> entries -> specs" shape.
- AudioCodecExtractor also adopts the shared cache + forEachString.

Robustness / error surface:
- compileDashedCi (and StreamingService/Source/ReleaseGroup
  inline caches): catch PatternSyntaxException only and
  warn-once to stderr instead of silent skip.
- ConfigLoader: RuntimeException(IOException) ->
  UncheckedIOException; restructure readFile so unknown-extension
  branch doesn't leak the BufferedReader or read the file twice.
- GuessResult.toJson: catch JsonProcessingException specifically.
- O